--- a/readme
+++ b/readme
@@ -1,7 +1,5 @@
-TIGERTALK README:
+All the code for the Princeton Club Talk website written by David Major, Uri Schwartz, and Michael Stambler. 
 
-This is where stuff will go I guess?
+The website can be accessed at clubtalk.herokuapp.com
 
-Can I edit from sublime
-
-gdsljkhndjls
+Feel free to check out our product guide and report.
